# IronForge

./: .gitignore  pyproject.toml
YOLO-cleaning/: README.md  autolabel.py  file_structure.txt  image_prompter.py
YOLO-cleaning/albumentation_pipeline_v2/: config.py  dataset.py  run_augmentation.py
YOLO-cleaning/augmentation/: image_transform_pipeline.py
YOLO-cleaning/augmentation_pipeline_utils/: pipeline.py  run_augmentation.py  transforms.py  utils.py
YOLO-cleaning/carton_detection_dev/: load_with_labels.py  load_without_labels.py
YOLO-cleaning/custom_workflow/: README.md  autolabel.py  bbx_2_polygon.py  jpeg_compress.py  xml_2_yolo.py
YOLO-cleaning/dataset_visualization/: 51_flow.py  51flow.py  README.md  dataset_ninja_importer.py
YOLO-cleaning/fiftyone_usage/: 51flow.py  README.md  custom_dataset_type.py  dataset_ninja_importer.py  load_datasets_manually.py
YOLO-utils/: convert.py  xml_2YOLO.py
check-if-image-normal/: README.md  is_normal_image.py
compatible-xmind/: README.md  compatible_xmind.py
count_my_codes/: count.py
epub-vertical-scrolling/: README.md  howto.md  zip.py
flasgger-practical/: README.md  colors.py  colors.yml
image-convert/: 2webp.py
json-formatter/: README.md  json_formatter.py  object_to_json_parser.py  test_json_formatter.py
json-formatter/static/: styles.css
mnemonic/: PBKDF2.py  README.md
signalr/: basic_usage.py
training_script/: object_detection_train.py
translators/: README.md  __init__.py  translate_API.py
xray-nginx-docker-main/: README.md  dockerfile  entrypoint.sh
xray-reality-docker-main/: README.md  dockerfile  entrypoint.sh  xray.conf.template
xray-reality-docker-main/.github/workflows/: build-and-push-ghcr.yml
