[tool.poetry]
name = "ironforge"
version = "0.1.0"
description = ""
authors = ["Shumin <332587268@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ebooklib = "^0.18"
flasgger = "^0.9.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
