[tool.poetry]
name = "ironforge"
version = "0.1.0"
description = ""
authors = ["Shumin <332587268@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ebooklib = "^0.18"
flasgger = "^0.9.7.1"
opencv-python = "^4.10.0.84"

[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
priority = "primary"


[tool.poetry.group.mnemonic.dependencies]
cryptography = "^43.0.1"
mnemonic = "^0.21"


[tool.poetry.group.yolo-utils.dependencies]
ultralytics = "^8.3.13"
aiofiles = "^24.1.0"


[tool.poetry.group.translator.dependencies]
aiohttp = "^3.10.10"


[tool.poetry.group.signalr.dependencies]
pysignalr = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
