[tool.poetry]
name = "ironforge"
version = "0.1.0"
description = ""
authors = ["Shumin <332587268@qq.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ebooklib = "^0.18"
flasgger = "^0.9.7.1"
opencv-python = "^4.10.0.84"
fastapi = {extras = ["standard"], version = "^0.115.4"}
python-multipart = "0.0.19"
curl-cffi = "^0.7.3"
gradio = "^5.9.1"

[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
priority = "primary"


[tool.poetry.group.mnemonic.dependencies]
cryptography = "^43.0.1"
mnemonic = "^0.21"


[tool.poetry.group.yolo-utils.dependencies]
ultralytics = "^8.3.13"
fiftyone = "^1.0.2"
albumentations = "^1.4.21"


[tool.poetry.group.translator.dependencies]
aiohttp = "^3.10.10"


[tool.poetry.group.signalr.dependencies]
pysignalr = "^1.0.0"


[tool.poetry.group.playground.dependencies]
promptflow-tracing = "^1.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
